Fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -581,39 +581,17 @@ hr {
     border: 0;
 }
 
-body {
-    color: white;
-    font-family: "Consola Mono", sans-serif;
-    margin-left: var(--sidebar-width);
-    margin-right: 20%;
-    padding: 2rem;
-}
-
-h1 {
-    text-align: left;
-    margin: 2rem 0;
-    font-size: 2.5rem;
-    font-family: 'Consola Mono', sans-serif;
-    margin-left: var(--sidebar-width);
-}
-
 .accordion {
     width: 100%;
     max-width: 100%;
     margin: 2rem auto;
-
-    margin-left: var(--sidebar-width);
-    
+    margin-left: var(--sidebar-width); 
 }
 
-.accordionItem{
-    
+.accordionItem{   
     color:white;
     margin: 1rem 0;
     border-radius: 0.5rem;
-    
-    
-
 }
 
 .accordionHeader{
@@ -635,7 +613,6 @@ h1 {
     position: absolute;
     left: 1rem ;
     transition: transform 0.3s ease-in-out;
-
 }
 
 .accordionHeader.active::after{
@@ -645,11 +622,8 @@ h1 {
 .accordionBody {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.4s ease-out;
-    
+    transition: max-height 0.4s ease-out; 
 }
-
-
 
 .accordionContent {
     padding: 1rem;
